--- a/index.html
+++ b/index.html
@@ -90,5 +90,12 @@
 
     <section id="0"><h1>Bitcoin</h1></section>
     <section id="1"><p>Bitcoin es una moneda.</p></section>
+    <section id="2"><p>Puedes ahorarlo, puedes gastarlo.
+    </p></section>
+    <section id="3"><p>Bitcoin fue creado en 2009 por un programador anónimo que se hacía llamar Satoshi Nakamoto.
+    </p></section>
+    <section id="4"><p>Satoshi desapareció, pero bitcoin sigue funcionando bien.</p></section>
+    <section id="5"><p>Con bitcoin, no hay nadie que se interponga entre usted y su dinero.</p></section>
+    <section id="5"><p>Si tienes dólares en un banco, no tienes control de esos dólares</p></section>
 </body>
 </html>
