--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
     </p></section>
     <section id="4"><p>Satoshi desapareció, pero bitcoin sigue funcionando bien.</p></section>
     <section id="5"><p>Con bitcoin, no hay nadie que se interponga entre usted y su dinero.</p></section>
-    <section id="5"><p>Si tienes dólares en un banco, no tienes control de esos dólares</p></section>
+    <section id="6"><p>Si tienes dólares en un banco, no tienes control de esos dólares.</p></section>
+    <section id="7"><p>Debes pedirle al banco que te devuelva los dólares o que se los envíe a otra persona.</p></section>
+    <section id="8"><p>Bitcoin no funciona de esa manera. Si tienes bitcoins, puedes guardarlos o enviárselos a otra persona. No necesitas pedir permiso y <strong>nadie</strong> podrá detenerte.</p></section>
 </body>
 </html>
