--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
             z-index: 1;
             overflow: auto;
         }
+
+        @media screen and (min-width: 768px)  {
+            html {
+                font-size: 100%;
+            }
+        }
     </style>
 </head>
 <body>
