--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
             html {
                 font-size: 100%;
             }
+
+            p {
+                font-size: 1rem;
+            }
         }
     </style>
 </head>
