--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             }
 
             p {
-                font-size: 1rem;
+                font-size: .75rem;
             }
         }
     </style>
