--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             overflow: auto;
         }
 
-        @media screen and (min-width: 768px)  {
+        @media screen and (max-width: 768px)  {
             html {
                 font-size: 100%;
             }
