--- a/index.html
+++ b/index.html
@@ -99,5 +99,9 @@
     <section id="6"><p>Si tienes dólares en un banco, no tienes control de esos dólares.</p></section>
     <section id="7"><p>Debes pedirle al banco que te devuelva los dólares o que se los envíe a otra persona.</p></section>
     <section id="8"><p>Bitcoin no funciona de esa manera. Si tienes bitcoins, puedes guardarlos o enviárselos a otra persona. No necesitas pedir permiso y <strong>nadie</strong> podrá detenerte.</p></section>
+    <section id="9"><p>Bitcoin no se puede inflar.</p></section>
+    <section id="10"><p>¿Qué es la inflación? ¿Qué respalda al dólar estadounidense?</p></section>
+    <section id="11"><p>La inflación ocurre cuando la cantidad de dólares aumenta y con cada dólar se compra menos.</p></section>
+    <section id="12"><img src="dollar-esp.png"></section>
 </body>
 </html>
