presentation dollar css

--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
     <section id="9"><p>Bitcoin no se puede inflar.</p></section>
     <section id="10"><p>¿Qué es la inflación? ¿Qué respalda al dólar estadounidense?</p></section>
     <section id="11"><p>La inflación ocurre cuando la cantidad de dólares aumenta y con cada dólar se compra menos.</p></section>
-    <section id="12"><img src="dollar-esp.png"></section>
+    <section id="12"><img src="dollar-esp.png" class="dollar"></section>
 </body>
 </html>
