presentation mobile swipe

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 slide(current + 1);
             }
 
-            if (e.changedTouches[0].screenX > X ) {
+            if (e.changedTouches[0].screenX > x) {
                 slide(current - 1);
             }
         });
