--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <title>Viva Bitcoin | Presentación de Bitcoin</title>
     <script>
-        const SLIDES = 35;
+        const SLIDES = 32;
         let current = parseInt(window.location.hash.substring(1)) || 0;
         window.location.hash = current;
         document.addEventListener("keydown", function(event) {
@@ -103,5 +103,40 @@
     <section id="10"><p>¿Qué es la inflación? ¿Qué respalda al dólar estadounidense?</p></section>
     <section id="11"><p>La inflación ocurre cuando la cantidad de dólares aumenta y con cada dólar se compra menos.</p></section>
     <section id="12"><img src="dollar-esp.png" class="dollar"></section>
+    <section id="13"><p>¿Cuál es el precio de una barra de chocolate?</p></section>
+    <section id="14"><p> Cuando era niño, eran 50¢. </p></section>
+    <section id="15"><p> La inflación actual de Bitcoin es del 1.72% anual y bajará al 0.2% anual en 2033. </p></section>
+    <section id="16"><p> Actualmente, el dólar se está inflando a un 9% anual y está <strong>diseñado</strong> para inflarse al menos un 2% anual, para siempre. </p></section>
+    <section id="17"><p> La inflación beneficia a las personas con activos, como casas, acciones y negocios. </p></section>
+    <section id="18"><p> Están protegidos de la inflación porque sus activos conservan su valor cuando se imprimen más dólares. </p></section>
+    <section id="19"><p> La inflación perjudica a las personas que no tienen activos. Si gana $15 por hora, el año que viene, esos $15 comprarán menos que el año anterior. </p></section>
+    <section id="20"><p> Si desea comprar una casa, esa casa costará cada vez más dólares a medida que los dólares se vuelvan cada vez menos valiosos debido a la inflación. </p></section>
+    <section id="21"><p> Bitcoin es software. </p></section>
+    <section id="22"><p> Se ejecuta en computadoras, como ésta. </p></section>
+    <section id="23"><p> Esta computadora está conectada a muchas otras computadoras que ejecutan el mismo software. </p></section>
+    <section id="24"><p> Juntos, forman la red Bitcoin, que procesa las transacciones de Bitcoin. </p></section>
+    <section id="25"><p> ¿Qué es una transacción? </p></section>
+    <section id="26"><p> Una transacción es alguien que envía bitcoins a otra persona. </p></section>
+    <section id="27"><p> Todas las computadoras de la red juntas se aseguran de que el propietario del bitcoin haya autorizado la transacción. </p></section>
+    <section id="28"><p> Los mineros recopilan transacciones y las publican como bloques, que en realidad son solo grandes grupos de transacciones. </p></section>
+    <section id="30"><p>Recursos</p>
+        <p><a href="https://mempool.space">mempool.space</a></p>
+        <p><a href="https://timechaincalendar.com">Timechain Calendar</a></p>
+        <p><a href="https://bitfeed.live/">Bitfeed</a></p>
+        <p><a href="https://timechaincube.com">Timechain Cube</a></p>
+    </section>
+     <section id="31"><p>Un bitcoin vale actualmente $55,000, pero puedes comprar parte de un bitcoin, por ejemplo $10.</p></section>
+     <!-- <section id="32"><p>¿Quién quiere bitcoins?</p></section> -->
+     <!-- <section id="33"><p>Descarga “Wallet of Satoshi” en la tienda de aplicaciones y te daré algunas.</p></section> -->
+     <!-- <section id="1"><h2>Feel free to interrupt and ask questions!</h2></section>
+    <section id="2">
+        <ul>
+          <li>
+            Your questions are more important than anything I have to say. 
+          </li>
+          <li>
+            If you have a question, other people probably have it too.
+          </li>
+        </ul></section> -->
 </body>
 </html>
