--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <title>Viva Bitcoin | Presentación de Bitcoin</title>
     <script>
-        const SLIDES = 32;
+        const SLIDES = 31;
         let current = parseInt(window.location.hash.substring(1)) || 0;
         window.location.hash = current;
         document.addEventListener("keydown", function(event) {
@@ -119,13 +119,17 @@
     <section id="26"><p> Una transacción es alguien que envía bitcoins a otra persona. </p></section>
     <section id="27"><p> Todas las computadoras de la red juntas se aseguran de que el propietario del bitcoin haya autorizado la transacción. </p></section>
     <section id="28"><p> Los mineros recopilan transacciones y las publican como bloques, que en realidad son solo grandes grupos de transacciones. </p></section>
-    <section id="30"><p>Recursos</p>
-        <p><a href="https://mempool.space">mempool.space</a></p>
-        <p><a href="https://timechaincalendar.com">Timechain Calendar</a></p>
-        <p><a href="https://bitfeed.live/">Bitfeed</a></p>
-        <p><a href="https://timechaincube.com">Timechain Cube</a></p>
+    <section id="29">
+        <div class="links">
+            <h3>Recursos</h3>
+            <p><a href="https://mempool.space">mempool.space</a></p>
+            <p><a href="https://timechaincalendar.com">Timechain Calendar</a></p>
+            <p><a href="https://bitfeed.live/">Bitfeed</a></p>
+            <p><a href="https://timechaincube.com">Timechain Cube</a></p>
+        </div>
+        
     </section>
-     <section id="31"><p>Un bitcoin vale actualmente $55,000, pero puedes comprar parte de un bitcoin, por ejemplo $10.</p></section>
+     <section id="30"><p>Un bitcoin vale actualmente $55,000, pero puedes comprar parte de un bitcoin, por ejemplo $10.</p></section>
      <!-- <section id="32"><p>¿Quién quiere bitcoins?</p></section> -->
      <!-- <section id="33"><p>Descarga “Wallet of Satoshi” en la tienda de aplicaciones y te daré algunas.</p></section> -->
      <!-- <section id="1"><h2>Feel free to interrupt and ask questions!</h2></section>
