--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     <section id="29">
         <div class="links">
             <h3>Recursos</h3>
+            <p><a href="https://viva-bitcoin.com">Viva Bitcoin</a></p>
             <p><a href="https://mempool.space">mempool.space</a></p>
             <p><a href="https://timechaincalendar.com">Timechain Calendar</a></p>
             <p><a href="https://bitfeed.live/">Bitfeed</a></p>
